--- a/my-app/src/components/Login.css
+++ b/my-app/src/components/Login.css
@@ -4,26 +4,46 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #121212; 
+    background:linear-gradient(to bottom, #0f0c29, #302b63, #24243e); 
     color: #ffffff; 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Jost', sans-serif;
+    position: relative;
+	width:100%;
+	height: 100%;
   }
   
   
   .login-dark-card {
     background-color: #1e1e1e; 
+    align-items: center;
     border-radius: 10px;
     padding: 2rem;
     width: 100%;
     max-width: 400px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); 
+    width: 350px;
+	height: 500px;
+	background: red;
+	overflow: hidden;
+	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
+	border-radius: 10px;
+	box-shadow: 5px 20px 50px #000;
   }
   
   
   .form-label {
-    color: #ffffff;
+    color: #fff;
   }
-  
+  .login{
+    color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
+	display: flex;
+	margin: 50px 20px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
+  }
   
   .form-control {
     background-color: #2a2a2a; 
