--- a/my-app/src/components/NotesList.css
+++ b/my-app/src/components/NotesList.css
@@ -1,6 +1,6 @@
 
 .notes-dark-container {
-    background-color: #121212;
+    background:linear-gradient(to bottom, #0f0c29, #302b63, #24243e); 
     color: #ffffff;
     padding: 20px;
     min-height: 100vh;
@@ -68,7 +68,7 @@
   }
   
   .notes-table th {
-    background-color: #333;
+    background-color: #5c3159;
     color: #fff;
   }
   
